fixed carousel image alignment issues and added descriptions

--- a/css/project2.css
+++ b/css/project2.css
@@ -8,7 +8,8 @@
   
   .carousel-images {
     display: flex;
-    overflow: hidden;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
   }
@@ -22,27 +23,30 @@
   
   .carousel-item {
     display: none;
-    text-align: center;
   }
 
   .carousel-item.active {
-    display:block
+    display:block;
   }
 
   .carousel-description {
-    margin-top: 10px;
+    margin-top: 0.5rem;
     font-size: 20px;
     color: #555;
+    text-align: left;
   }
 
   .carousel-image {
     display: none;
-    width: 100%;
-    height: auto;
   }
   
   .carousel-image.active {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 34.375rem;
+    border: #555 1px solid;
   }
   
   .carousel-btn {
